<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_add_contact">Add</string>
    <string name="edit_firstname">First Name</string>
    <string name="edit_lastname">Last Name</string>
    <string name="edit_phone">Phone</string>
    <string name="edit_email">Email</string>
    <string name="edit_nickname">Nickname</string>
    <string name="btn_save">Save</string>
    <string name="error_firstname_required">First name is required</string>
    <string name="success_contact_created">Contact created</string>
    <string name="error_contact_creation">Error creating contact</string>
    <string name="toolbar_add_contact">Add Contact</string>
    <string name="contact_fullname_placeholder">Firstname Lastname</string>
    <string name="contact_phone_placeholder">Phone</string>
    <string name="contact_email_placeholder">Email</string>
    <string name="contact_nickname_placeholder">Nickname</string>

    <string name="contact_fullname_format">%1$s %2$s</string>

    <string name="header_color">Header color</string>
    <string name="choose_color">Choose color</string>
	<string name="color_hue">Hue</string>
    <string name="color_saturation">Saturation</string>
    <string name="color_brightness">Brightness</string>
    <string name="hex_ffffffff">Hex: #FFFFFFFF</string>

	<string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>

    <string name="contact_not_found">Error : contact not found</string>
    <string name="toolbar_edit_contact">Edit Contact</string>
    <string name="success_contact_updated">Contact updated</string>
    <string name="error_contact_update">Error updating contact</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_contact">Do you really want to delete this contact?</string>
    <string name="success_contact_deleted">Contact deleted</string>
    <string name="error_contact_delete">Unable to delete this contact</string>

    <string name="message">Message</string>
    <string name="write_message">Write a message</string>
    <string name="send_message">Send</string>

    <string name="background_time_toast">App sent to background at: %1$s</string>
</resources>