<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/edit_contact_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".EditContactActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar_edit"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:theme="?attr/actionBarTheme"
		android:title="@string/toolbar_edit_contact" />

	<ScrollView
		android:id="@+id/scroll_edit_contact"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:padding="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<EditText
				android:id="@+id/edit_contact_firstname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:hint="@string/edit_firstname"
				android:inputType="text" />

			<EditText
				android:id="@+id/edit_contact_lastname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:hint="@string/edit_lastname"
				android:inputType="text" />

			<EditText
				android:id="@+id/edit_contact_phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:hint="@string/edit_phone"
				android:inputType="phone" />

			<EditText
				android:id="@+id/edit_contact_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="24dp"
				android:hint="@string/edit_email"
				android:inputType="textEmailAddress" />

			<EditText
				android:id="@+id/edit_contact_nickname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:hint="@string/edit_nickname"
				android:inputType="text" />

			<Button
				android:id="@+id/btn_save_contact"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="12dp"
				android:text="@string/btn_save"
				android:textSize="16sp" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>