<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="8dp"
	app:cardCornerRadius="12dp"
	app:cardElevation="4dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<TextView
			android:id="@+id/text_fullname"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/contact_fullname_placeholder"
			android:textSize="18sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/text_phone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/contact_phone_placeholder" />

		<TextView
			android:id="@+id/text_email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/contact_email_placeholder" />

		<TextView
			android:id="@+id/text_nickname"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/contact_nickname_placeholder" />
	</LinearLayout>

</com.google.android.material.card.MaterialCardView>