<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/contact_detail_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ContactDetailActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar_detail"
		android:layout_width="0dp"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:theme="?attr/actionBarTheme"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<LinearLayout
		android:id="@+id/content_container"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:orientation="vertical"
		android:padding="24dp"
		app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<TextView
			android:id="@+id/text_detail_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="24sp"
			android:textStyle="bold"
			android:paddingBottom="24dp"
			tools:text="Jean Dupont" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/edit_phone"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/text_detail_phone_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="16dp"
			tools:text="06 12 34 56 78" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/edit_email"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/text_detail_email_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="16dp"
			tools:text="jean@example.com" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/edit_nickname"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/text_detail_nickname_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="Juju" />

		<Button
			android:id="@+id/button_message"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/message" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>